# cobaltstrike-beacon-rust

./: Cargo.toml  README.md  dump_key.py  generate_config.py
.github/workflows/: rust.yml
src/: crypt.rs  main.rs  profile.rs  utils.rs
