[package]
name = "beacon-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version ="0.11.12", features = ["blocking", "cookies"] }
bytes = "1.2.1"
sha2 = "0.10.6"
hexdump = "0.1.1"
rsa = "0.7.0"
rand = "*"
base64 = "0.13.0"
rust-crypto = "^0.2"
byteorder = "1"
anyhow = "1.0"
hex = "0.4.3"
